--- a/src/routes/Admin/AdminData/projects.json
+++ b/src/routes/Admin/AdminData/projects.json
@@ -1,46 +1,28 @@
 [
     { "pid":"1",
         
+            "atts":
+            {
             "project_title":"fggg",
             "discription": " lorem iopsum ufb uboi vwio ie wsui",
             "project_link":"",
             "img":"",
             "github":""
+            }
            
     },
 
     { "pid":"2",
-
         
-            "project_title":"fggjjjg",
-        "discription": " lorem iopsum ufb uboi vwio ie wsui",
-        "project_link":"",
-        "img":"",
-        "github":""
-        
-        
-    
-    }
-    ,
-    { "pid":"3",
-        
-        
-        "project_title":"fgg1111g",
-        "discription": " lorem iopsum ufb uboi vwio ie wsui",
-        "project_link":"",
-        "img":"",
-        "github":"" 
-    
-    },
-
-        { "pid":"4",
-          
-        "project_title":"fggjjjg666",
-        "discription": " lorem iopsum ufb uboi vwio ie wsui",
-        "project_link":"",
-        "img":"",
-        "github":""
-        
+            "atts":
+            {
+            "project_title":"fggg2",
+            "discription": " lorem iopsum ufb uboi vwio ie wsui",
+            "project_link":"",
+            "img":"",
+            "github":""
+            }
+           
     }
 ]
        
