--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.14.19",
+    "axios": "^1.6.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "npm": "^10.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-file-reader": "^1.1.4",
     "react-router-dom": "^6.20.0",
     "sort-by": "^1.2.0"
   },
