--- a/src/routes/Admin/AdminData/projects.json
+++ b/src/routes/Admin/AdminData/projects.json
@@ -6,7 +6,8 @@
             "discription": " lorem iopsum ufb uboi vwio ie wsui",
             "project_link":"",
             "img":"",
-            "github":""
+            "github":"",
+            "gif":""
             
            
     },
@@ -18,7 +19,8 @@
             "discription": " lorem iopsum ufb uboi vwio ie wsui",
             "project_link":"",
             "img":"",
-            "github":""
+            "github":"",
+            "gif":""
             
            
     }
@@ -26,3 +28,4 @@
        
       
       
+ 
