--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
+    "match-sorter": "^6.3.4",
     "npm": "^10.2.4",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
+    "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
