--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "node main.jsx",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -18,6 +19,7 @@
     "@mui/material": "^5.14.19",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
+    "framer-motion": "^11.3.17",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "npm": "^10.2.4",
@@ -31,10 +33,12 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "postcss": "^8.4.40",
     "tailwindcss": "^3.4.6",
     "vite": "^5.0.0"
   }
